--- a/deploy.yaml
+++ b/deploy.yaml
@@ -22,6 +22,63 @@ objects:
     - name: v1alpha1
       served: true
       storage: true
+- apiVersion: apiextensions.k8s.io/v1beta1
+  kind: CustomResourceDefinition
+  metadata:
+    name: gogs.example.redhat.com
+  spec:
+    group: example.redhat.com
+    names:
+      kind: Gogs
+      listKind: GogsList
+      plural: gogs
+      singular: gogos
+    scope: Namespaced
+    subresources:
+      status: {}
+    version: v1alpha1
+    versions:
+    - name: v1alpha1
+      served: true
+      storage: true
+- apiVersion: apiextensions.k8s.io/v1beta1
+  kind: CustomResourceDefinition
+  metadata:
+    name: jenkins.example.redhat.com
+  spec:
+    group: example.redhat.com
+    names:
+      kind: Jenkins
+      listKind: JenkinsList
+      plural: jenkins
+      singular: jenkins
+    scope: Namespaced
+    subresources:
+      status: {}
+    version: v1alpha1
+    versions:
+    - name: v1alpha1
+      served: true
+      storage: true
+- apiVersion: apiextensions.k8s.io/v1beta1
+  kind: CustomResourceDefinition
+  metadata:
+    name: sonarqubes.example.redhat.com
+  spec:
+    group: example.redhat.com
+    names:
+      kind: SonarQube
+      listKind: SonarQubeList
+      plural: sonarqubes
+      singular: sonarqube
+    scope: Namespaced
+    subresources:
+      status: {}
+    version: v1alpha1
+    versions:
+    - name: v1alpha1
+      served: true
+      storage: true
 - apiVersion: authorization.openshift.io/v1
   kind: ClusterRole
   metadata:
@@ -56,136 +113,15 @@ objects:
   kind: ServiceAccount
   metadata:
     name: devops-tools-operator
-- apiVersion: rbac.authorization.k8s.io/v1
-  kind: Role
-  metadata:
-    creationTimestamp: null
-    name: devops-tools-operator
-  rules:
-  - apiGroups:
-    - ""
-    resources:
-    - pods
-    - services
-    - endpoints
-    - persistentvolumeclaims
-    - events
-    - configmaps
-    - secrets
-    - serviceaccounts
-    - rolebindings
-    - roles
-    verbs:
-    - create
-    - update
-    - delete
-    - get
-    - list
-    - watch
-    - patch
-  - apiGroups:
-    - rbac.authorization.k8s.io
-    resources:
-    - rolebindings
-    - roles
-    verbs:
-    - create
-    - update
-    - delete
-    - get
-    - list
-    - watch
-    - patch
-  - apiGroups:
-    - authorization.openshift.io
-    resources:
-    - rolebindings
-    - roles
-    verbs:
-    - create
-    - update
-    - delete
-    - get
-    - list
-    - watch
-    - patch
-  - apiGroups:
-    - apps
-    resources:
-    - deployments
-    - daemonsets
-    - replicasets
-    - statefulsets
-    verbs:
-    - create
-    - update
-    - delete
-    - get
-    - list
-    - watch
-    - patch
-  - apiGroups:
-    - route.openshift.io
-    resources:
-    - routes
-    verbs:
-    - create
-    - update
-    - delete
-    - get
-    - list
-    - watch
-    - patch
-  - apiGroups:
-    - apps
-    resources:
-    - deployments
-    - deployments/finalizers
-    verbs:
-    - create
-    - update
-    - delete
-    - get
-    - list
-    - watch
-    - patch
-  - apiGroups:
-    - ""
-    resources:
-    - namespaces
-    verbs:
-    - get
-  - apiGroups:
-    - apps
-    resourceNames:
-    - devops-tools-operator
-    resources:
-    - deployments/finalizers
-    verbs:
-    - update
-  - apiGroups:
-    - example.redhat.com
-    resources:
-    - '*'
-    verbs:
-    - create
-    - update
-    - delete
-    - get
-    - list
-    - watch
-    - patch
 - kind: RoleBinding
-  apiVersion: rbac.authorization.k8s.io/v1
+  apiVersion: authorization.openshift.io/v1
   metadata:
     name: devops-tools-operator
   subjects:
   - kind: ServiceAccount
     name: devops-tools-operator
   roleRef:
-    kind: Role
-    name: devops-tools-operator
-    apiGroup: rbac.authorization.k8s.io
+    name: admin
 - apiVersion: apps/v1
   kind: Deployment
   metadata:
