--- a/deploy.yaml
+++ b/deploy.yaml
@@ -6,25 +6,6 @@ objects:
 - apiVersion: apiextensions.k8s.io/v1beta1
   kind: CustomResourceDefinition
   metadata:
-    name: devopstools.example.redhat.com
-  spec:
-    group: example.redhat.com
-    names:
-      kind: DevOpsTools
-      listKind: DevOpsToolsList
-      plural: devopstools
-      singular: devopstools
-    scope: Namespaced
-    subresources:
-      status: {}
-    version: v1alpha1
-    versions:
-    - name: v1alpha1
-      served: true
-      storage: true
-- apiVersion: apiextensions.k8s.io/v1beta1
-  kind: CustomResourceDefinition
-  metadata:
     name: gogs.example.redhat.com
   spec:
     group: example.redhat.com
@@ -144,7 +125,7 @@ objects:
             - /tmp/ansible-operator/runner
             - stdout
             # Replace this with the built image name
-            image: "docker-registry.default.svc:5000/openshift/devops-tools-operator:v0.0.2"
+            image: "docker-registry.default.svc:5000/openshift/devops-tools-operator:latest"
             imagePullPolicy: Always
             volumeMounts:
             - mountPath: /tmp/ansible-operator/runner
@@ -152,7 +133,7 @@ objects:
               readOnly: true
           - name: operator
             # Replace this with the built image name
-            image: "docker-registry.default.svc:5000/openshift/devops-tools-operator:v0.0.2"
+            image: "docker-registry.default.svc:5000/openshift/devops-tools-operator:latest"
             imagePullPolicy: Always
             volumeMounts:
             - mountPath: /tmp/ansible-operator/runner
