--- a/watches.yaml
+++ b/watches.yaml
@@ -13,3 +13,8 @@
   group: example.redhat.com
   kind: SonarQube
   playbook: /opt/ansible/sonarqube.yaml
+
+- version: v1alpha1
+  group: example.redhat.com
+  kind: CodeReady
+  playbook: /opt/ansible/codeready.yaml
