--- a/deploy.yaml
+++ b/deploy.yaml
@@ -79,6 +79,25 @@ objects:
     - name: v1alpha1
       served: true
       storage: true
+- apiVersion: apiextensions.k8s.io/v1beta1
+  kind: CustomResourceDefinition
+  metadata:
+    name: rhamt.example.redhat.com
+  spec:
+    group: example.redhat.com
+    names:
+      kind: Rhamt
+      listKind: RhamtList
+      plural: rhamt
+      singular: rhamt
+    scope: Namespaced
+    subresources:
+      status: {}
+    version: v1alpha1
+    versions:
+    - name: v1alpha1
+      served: true
+      storage: true
 - apiVersion: authorization.openshift.io/v1
   kind: ClusterRole
   metadata:
