--- a/watches.yaml
+++ b/watches.yaml
@@ -18,3 +18,8 @@
   group: example.redhat.com
   kind: CodeReady
   playbook: /opt/ansible/codeready.yaml
+
+- version: v1alpha1
+  group: example.redhat.com
+  kind: Rhamt
+  playbook: /opt/ansible/rhamt.yaml
