--- a/deploy.yaml
+++ b/deploy.yaml
@@ -98,6 +98,25 @@ objects:
     - name: v1alpha1
       served: true
       storage: true
+- apiVersion: apiextensions.k8s.io/v1beta1
+  kind: CustomResourceDefinition
+  metadata:
+    name: pathfinder.example.redhat.com
+  spec:
+    group: example.redhat.com
+    names:
+      kind: PathFinder
+      listKind: PathFinderList
+      plural: pathfinder
+      singular: pathfinder
+    scope: Namespaced
+    subresources:
+      status: {}
+    version: v1alpha1
+    versions:
+    - name: v1alpha1
+      served: true
+      storage: true
 - apiVersion: authorization.openshift.io/v1
   kind: ClusterRole
   metadata:
