--- a/toolset-crs.yaml
+++ b/toolset-crs.yaml
@@ -86,3 +86,15 @@ spec:
       registry: docker.io
       namespace: windup3
       tag: 4.2.1.Final
+---
+apiVersion: example.redhat.com/v1alpha1
+kind: PathFinder
+metadata:
+  name: pathfinder
+spec:
+  pathfinder:
+    enabled: true
+    images:
+      registry: quay.io
+      namespace: pathfinder
+      tag: latest
