jenkins deployment changed to use product-included template in order to correctly deploy the supported version of jenkins. added option 'jenkins.plugins' for installing additional plugins like gatling plugin.

--- a/playbooks/jenkins.yaml
+++ b/playbooks/jenkins.yaml
@@ -15,5 +15,8 @@
       _jenkins_state: "{{ jenkins.enabled | ternary('present', 'absent') }}"
       _jenkins_namespace: "{{ meta.namespace }}"
 #      _jenkins_name: "{{ meta.name }}"
-      _jenkins_volume_size: "{{ jenkins.volume_size | d('1Gi') }}"
-      _jenkins_disable_administrative_monitors: "{{ jenkins_disable_administrative_monitors | d('false)') }}"
+      _jenkins_oauth: "{{ jenkins.useOAuth | d(true) }}"
+      _jenkins_memory_limit: "{{ jenkins.memoryLimit | d('1Gi') }}"
+      _jenkins_volume_size: "{{ jenkins.volumeSize | d('1Gi') }}"
+      _jenkins_disable_administrative_monitors: "{{ jenkins.jenkinsDisableAdministrativeMonitors | d(false) }}"
+      _jenkins_plugins: "{{ jenkins.plugins | d('') }}"
