--- a/roles/pathfinder-ocp/tasks/main.yml
+++ b/roles/pathfinder-ocp/tasks/main.yml
@@ -7,20 +7,24 @@
     namespace: "{{ _pathfinder_namespace }}"
   register: mongodb_dc
 
-- name: Deploy MongoDB using template
+- name: Deploy/Undeploy MongoDB using template
   when:
-    - _pathfinder_state == "present"
-    - mongodb_dc.resources == []
+    - (_pathfinder_enabled and mongodb_dc.resources == []) or
+      (not _pathfinder_enabled and mongodb_dc.resources != [])
   shell: |
-    oc new-app --template=mongodb-persistent -p MONGODB_DATABASE=pathfinder -n {{ _pathfinder_namespace }}
+    oc get template mongodb-persistent -o yaml -n openshift | \
+      oc process -f - -p MONGODB_DATABASE=pathfinder --local | \
+      oc {{ create_or_delete }} -f - -n {{ _pathfinder_namespace }}
+  vars:
+    create_or_delete: "{{ _pathfinder_enabled | ternary('create', 'delete') }}"
 
 - name: Verify that MongoDB Pod is running
   when:
-    - _pathfinder_state == "present"
+    - _pathfinder_enabled
   k8s_facts:
     kind: Pod
     label_selectors:
-      - app = mongodb-persistent
+      - name = mongodb
     namespace: "{{ _pathfinder_namespace }}"
   register: mongodb_pod
   until:
@@ -28,15 +32,6 @@
   - mongodb_pod.resources[0].status.phase == "Running"
   retries: 20
   delay: 5
-
-- name: Undeploy MongoDB using template
-  when:
-    - _pathfinder_state == "absent"
-    - mongodb_dc.resources != []
-  shell: |
-    oc get template mongodb-persistent -o yaml -n openshift | \
-      oc process -f - -p MONGODB_DATABASE=pathfinder -o yaml --local | \
-      oc delete -f - -n {{ _pathfinder_namespace }}
 
 - name: Verify that dc/pathfinder-* exists
   k8s_facts:
@@ -46,20 +41,22 @@
     namespace: "{{ _pathfinder_namespace }}"
   register: pathfinder_dc
 
-- name: Deploy PathFinder using template
+- name: Deploy/Undeploy PathFinder using template
   when:
-    - _pathfinder_state == "present"
-    - pathfinder_dc.resources == []
+    - (_pathfinder_enabled and pathfinder_dc.resources == []) or
+      (not _pathfinder_enabled and pathfinder_dc.resources != [])
   shell: |
     oc process -f {{ role_path }}/files/pathfinder-full-template.yaml \
       -p IMAGES_REGISTRY={{ _pathfinder_images_registry }} \
       -p IMAGES_NAMESPACE={{ _pathfinder_images_namespace }} \
       -p IMAGES_TAG={{ _pathfinder_images_tag }} | \
-      oc create -f - -n {{ _pathfinder_namespace }}
+      oc {{ create_or_delete }} -f - -n {{ _pathfinder_namespace }}
+  vars:
+    create_or_delete: "{{ _pathfinder_enabled | ternary('create', 'delete') }}"
 
 - name: Verify that PathFinder Pod is running
   when:
-    - _pathfinder_state == "present"
+    - _pathfinder_enabled
   k8s_facts:
     kind: Pod
     label_selectors:
@@ -71,11 +68,3 @@
   - pathfinder_pod.resources[0].status.phase == "Running"
   retries: 50
   delay: 5
-
-- name: Undeploy PathFinder using template
-  when:
-    - _pathfinder_state == "absent"
-    - pathfinder_dc.resources != []
-  shell: |
-    oc process -f {{ role_path }}/files/pathfinder-full-template.yaml | \
-      oc delete -f - -n {{ _pathfinder_namespace }}
