--- a/playbooks/sonarqube.yaml
+++ b/playbooks/sonarqube.yaml
@@ -37,8 +37,13 @@
       _sonarqube_name: "{{ sonarqube_service_name }}"
       _sonarqube_ssl: "{{ sonarqube.ssl | d(False) | bool }}"
       _sonarqube_volume_size: "{{ sonarqube.volume_size | d('1Gi')}}"
+      _sonarqube_memory_request: "{{ sonarqube.memory.request | d('2Gi') }}"
+      _sonarqube_memory_limit: "{{ sonarqube.memory.limit | d('3Gi') }}"
+      _sonarqube_cpu_request: "{{ sonarqube.cpu.request | d('1') }}"
+      _sonarqube_cpu_limit: "{{ sonarqube.cpu.limit | d('2') }}"     
       _sonarqube_postgresql_service_name: "postgresql-sonarqube"
       _sonarqube_postgresql_database_name: sonardb
       _sonarqube_postgresql_user: "{{ sonarqube.postgresql.username | d('sonar') }}"
       _sonarqube_postgresql_password: "{{ sonarqube.postgresql.password | d('sonar') }}"
-      _sonarqube_image_tag: "{{ sonarqube.image_tag | d('7.7') }}"
+      _sonarqube_image: "{{ sonarqube.image | d('quay.io/gpte-devops-automation/sonarqube') }}"
+      _sonarqube_image_tag: "{{ sonarqube.image_tag | d('7.9.2') }}"
