--- a/roles/sonarqube-ocp/tasks/main.yml
+++ b/roles/sonarqube-ocp/tasks/main.yml
@@ -85,7 +85,7 @@
             successThreshold: 1
             timeoutSeconds: 1
           resources:
-            request:
+            requests:
               cpu: "{{ _sonarqube_cpu_request }}"
               memory: "{{ _sonarqube_memory_request}}"
             limits:
